--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  height: 100vh;
-}
+/* body {
+  min-height: 100vh;
+} */
 
 #root {
-  height: 100%;
+  height: 100vh;
 }
