--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
 #root {
   height: 100vh;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
